# affiliate-webscrapers

./: .gitignore  main.py  pyproject.toml  readme.md  test.py
affiliates/: main.py  scrapy.cfg
affiliates/affiliates/: BaseSpider.py  items.py  middlewares.py  pipelines.py  settings.py
affiliates/affiliates/WIP/: top10vpn.py
affiliates/affiliates/data/: filter_urls.py
affiliates/affiliates/spiders/: cnet.py  getSitemaps.py  pcmag.py  techradar.py  tomsguide.py  vpnmentor.py
