[tool.poetry]
name = "scrapy-webscraping"
version = "0.1.0"
description = ""
authors = ["Dun <dunxin.ong@outlook.com>"]
readme = "README.md"
packages = [{include = "scrapy_webscraping"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
scrapy = "^2.8.0"
bs4 = "^0.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
